    OR
  - Create multiple OpenDialogs for each type and show appropiate dialog when needed.
- Add SaveDialog.
- Add save to CEL.
- Add export to CEL.
- Ask for color fit when loading a CEL file.
- Add gradients.
- Hide menu when not needed.
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.03.21
- Some tools didn't clear the Infobar after them. Fixed.

2023.03.20
- Undo/Redo buttons now uses OnClick event instead of the MessageQueue.
- SubMenuItems now can be disabled. (Appears in grey and remains grey when the
  mouse points it.)
- File/Quit works, but it quits instantly without asking anything.
- Added CELSHOW tool. It shows CEL for a short interval (1s). Useful after
  loading or modifying cel.
- The loaded CEL is always moved to 0,0. After loading CEL the CEL is visible
  for a short time.
- Fix: MessageQueue.AddMessage still accepted string value but did nothing with it.
- CEL/Flip V and CEL/Flip H works.
- Magnify CEL dialog appears when selecting CEL/Magnify. Dialog items work, but
  CEL is not magnified when OK clicked. You can use key 2, 3 and 5 to select
  magnification, Enter to "OK" and Escape to "Cancel".
- Magnification works.
- PutCEL now shows CEL's top-left coordinate and the relative position to
  original place.

2023.03.19
- Fix: When right clicked on drawarea to cancel color picking, ToggleControls
  also occured.
- Fix: When right clicked to cancel any tool, ToggleControls also occured.
- ToggleControls now toggles MainMenu too, to let the user see the whole window.
- Closing the window with red X now shuts down app correctly.

2023.03.18
- Fix: You couldn't right click the key color to pick another color in color selector.
- Fix: When the same color appears more than once in the color selector, right
  clicking any of it caused all of them to appear as color picking target.

2023.03.17
- Color sliders moved just above the palette block in PaletteEditor.
- Fixed mouse wheel events.

2023.03.16