@@ -20,9 +20,9 @@ PutCEL=53
 GetColor=58
 
 [DrawArea]
-Zoom=4
-ZoomLeft=83
-ZoomTop=38
+Zoom=3
+ZoomLeft=-12
+ZoomTop=4
 
 [BasicControls]
 Tool0=DRAW
@@ -31,7 +31,7 @@ Tool2=LINE
 Tool3=CIRCLE
 Tool4=SEP.
 Tool5=FILL
-ActiveTool=1
+ActiveTool=2
 Ink0=OPAQUE
 Ink1=OPAQUE
 Ink2=L GRAD
@@ -57,5 +57,5 @@ Selected4=4
 Selected5=5
 Selected6=105
 Selected7=7
-ActiveColor=1
+ActiveColor=0
 
