@@ -15,6 +15,9 @@ Todo:
 
 2023.03.21
 - Some tools didn't clear the Infobar after them. Fixed.
+- Rotate CEL dialog appears when selecting CEL/Rotate. You can select the amount
+  to rotate by the buttons, or pressing keys 1..3. Clicking "OK" or pressing Enter
+  will rotate the CEL, "Cancel" will close the dialog without doing anything.
 
 2023.03.20
 - Undo/Redo buttons now uses OnClick event instead of the MessageQueue.
